# skt-project

./: README.md  langgraph.json  main.py  pyproject.toml
data/bm25_index_langgraph/: bm25_retriever.pkl  documents.json  metadata.json
data/chroma_db_langgraph/: chroma.sqlite3
data/langgraph_docs/: crawl_summary.json  langgraph_docs.jsonl
data/processed/: test_final.json  test_final_v2.json  test_full_code.json  test_improved.json
data/processed/full_code_batch/day5/: DAY05_001_LangGraph_StateGraph.preprocessed.json  DAY05_001_LangGraph_StateGraph.refined.preprocessed.json
data/processed/json_improved/: DAY05_001_LangGraph_StateGraph.preprocessed.json  DAY05_007_LangGraph_MessageGraph.preprocessed.json  DAY05_008_LangGraph_ReAct.preprocessed.json  DAY06_001_LangGraph_Memory.preprocessed.json  DAY06_002_LangGraph_HITL.preprocessed.json  DAY06_005_LangGraph_SelfRAG.preprocessed.json  DAY06_006_LangGraph_CRAG.preprocessed.json
knowledge_system/: __init__.py  main.py
knowledge_system/edges/: __init__.py  routing.py
knowledge_system/graph/: __init__.py  builder.py
knowledge_system/models/: __init__.py  state.py
knowledge_system/nodes/: __init__.py  analyzer.py  generator.py  searchers.py
knowledge_system/utils/: __init__.py  relevance_evaluator.py
scripts/: build_hybrid_search_db.py  convert_notebooks.py  json_to_neo4j_parser.py  langgraph_docs_crawler.py  markdown_graph_preprocessor.py  markdown_llm_refiner.py  markdown_to_neo4j_parser.py  neo4j_rag_system.py  test_bm25_debug.py  test_vector_search.py  test_web_search.py  verify_neo4j_results.py
(+15 files in other folders)
